MDSMonitor: handle damaged from standby-replay

This change does a few things:

- if a state transition is invalid or a beacon is garbage, the
  MDSMonitor now evicts the MDS instead of ignoring the problem.

- standby state validation is moved to prepare_beacon where eviction can
  happen.

- standby-replay may indicate the rank is damaged (failure to replay the
  journal).

- if the rank is damaged, both the rank holder and standby-replay daemon
  (if any) will be removed.

Fixes: https://tracker.ceph.com/issues/52565
Signed-off-by: Patrick Donnelly <pdonnell@redhat.com>
(cherry picked from commit 20509bb6c82e872127ab838d45402be0d0b91b5f)